--- a/src/assets/style/component/expo.scss
+++ b/src/assets/style/component/expo.scss
@@ -6,6 +6,7 @@
     position: absolute;
     left: 250px;
     top: -20px;
+    z-index: 6;
   }
   .expo__box {
     width: 80%;
@@ -24,7 +25,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      .card {
+      .card-expo {
         width: 259px;
         height: 222px;
         background: #ffffff;
