--- a/src/assets/style/component/home.scss
+++ b/src/assets/style/component/home.scss
@@ -4,9 +4,22 @@ html {
   overflow-x: hidden;
   //   font-family: "Montserrat", sans-serif;
   //   font-family: "Poppins", sans-serif;
+  font-size: 16px;
 }
+
 .main__box {
   width: 1440px;
   margin: 0 auto;
-  background-color: gray;
+  background-color: #f0f0f0;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 10px;
+  }
+}
+@media (max-width: 375px) {
+  html {
+    font-size: 9.5px;
+  }
 }
