--- a/src/assets/style/component/review.scss
+++ b/src/assets/style/component/review.scss
@@ -1,134 +1,131 @@
-html {
-  font-size: 16px;
-  .review {
-    width: 94%;
-    margin: 0 auto 0 0;
-    height: 700px;
-    position: relative;
-    .reline {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: 2;
-    }
-    .main__title {
-      z-index: 5;
-      width: 100%;
+.review {
+  overflow: hidden;
+  width: 94%;
+  margin: 0 auto 0 0;
+  height: 700px;
+  position: relative;
+  .reline {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+  }
+  .main__title {
+    z-index: 5;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .review-title {
+      z-index: 4;
+      margin-top: 9rem;
+      text-align: center;
       display: flex;
       justify-content: center;
-      .review-title {
-        z-index: 4;
-        margin-top: 9rem;
-        text-align: center;
+      width: 23.7rem;
+      height: 6.25rem;
+      font-family: "Montserrat";
+      font-weight: 700;
+      font-size: 3rem;
+      line-height: 120%;
+      color: #263959;
+    }
+  }
+  .review__cardbox {
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    .cards {
+      margin-top: 3.75rem;
+      height: 19rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .pagination__box {
+      width: 100%;
+      height: 25px;
+      margin-top: 2.75rem;
+      display: flex;
+      justify-content: center;
+      .pag {
+        width: 95px;
+        height: 100%;
         display: flex;
-        justify-content: center;
-        width: 23.7rem;
-        height: 6.25rem;
-        font-family: "Montserrat";
-        font-weight: 700;
-        font-size: 3rem;
-        line-height: 120%;
-        color: #263959;
+        align-items: center;
+        .crcle {
+          border-radius: 50%;
+          display: inline-block;
+          width: 22px;
+          height: 22px;
+          background: #906cf94f;
+        }
+        .active {
+          margin: 0 10px;
+          width: 30px;
+          height: 30px;
+          background: #906cf9;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .review {
+    width: 100%;
+    height: 410px;
+    .main__title {
+      .review-title {
+        margin-top: 5rem;
       }
     }
     .review__cardbox {
-      z-index: 5;
-      display: flex;
-      flex-direction: column;
       .cards {
-        margin-top: 3.75rem;
-        background-color: rgba(0, 0, 0, 0.301);
-        height: 19rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         .card {
-          z-index: 5;
-          width: 23.5rem;
-          height: 100%;
-          background: #ffffff;
-          border-radius: 15px;
-          padding-left: 1.9rem;
-          margin: 0 10px;
+          width: 22rem;
+          height: 17rem;
           .top__info {
-            margin: 1.9rem 0 0;
-            display: flex;
-            align-items: center;
-            gap: 15px;
             img {
-              width: 4rem;
-              height: 4rem;
-              object-fit: contain;
-            }
-            h2 {
-              font-family: "Montserrat";
-              font-style: normal;
-              font-weight: 700;
-              font-size: 1.25rem;
-              line-height: 120%;
-              color: #263959;
-            }
-            p {
-              font-family: "Poppins";
-              font-weight: 400;
-              font-size: 1rem;
-              line-height: 120%;
-              color: rgba(38, 57, 89, 0.6);
+              width: 3rem;
+              height: 3rem;
             }
           }
           .midlle__info {
-            margin-top: 1.56rem;
-            h1 {
-              font-family: "Poppins";
-              font-weight: 500;
-              font-size: 16px;
-              line-height: 120%;
-              color: #263959;
-            }
-            p {
-              margin-top: 0.5rem;
-              font-family: "Poppins";
-              font-style: normal;
-              font-size: 16px;
-              line-height: 145%;
-              color: rgba(38, 57, 89, 0.65);
-            }
-          }
-          .bottom__starbox {
-            margin-top: 1.9rem;
-            img {
-              width: 1.7rem;
-              height: 1.7rem;
-              object-fit: cover;
-            }
           }
         }
       }
       .pagination__box {
-        width: 100%;
-        height: 25px;
-        margin-top: 2.75rem;
-        display: flex;
-        justify-content: center;
         .pag {
-          width: 95px;
-          height: 100%;
-          display: flex;
-          align-items: center;
           .crcle {
-            border-radius: 50%;
-            display: inline-block;
-            width: 22px;
-            height: 22px;
-            background: #906cf94f;
+            width: 1.1rem;
+            height: 1.1rem;
           }
           .active {
-            margin: 0 10px;
-            width: 30px;
-            height: 30px;
-            background: #906cf9;
+            width: 1.4rem;
+            height: 1.4rem;
           }
         }
+      }
+    }
+  }
+}
+@media (max-width: 375px) {
+  .review {
+    height: 720px;
+    position: relative;
+    .reline {
+      top: 30%;
+    }
+    .review__cardbox {
+      .cards {
+        flex-wrap: wrap;
+        .card {
+          margin: 10px 0;
+        }
+      }
+      .pagination__box {
+        position: absolute;
+        bottom: 0;
       }
     }
   }
