step one finish

--- a/src/assets/style/component/expo.scss
+++ b/src/assets/style/component/expo.scss
@@ -110,7 +110,7 @@
       .expo__cards {
         height: 275px;
         right: 70px;
-        .card {
+        .card-expo {
           width: 150px;
           height: 130px;
           img {
