--- a/src/assets/style/component/home.scss
+++ b/src/assets/style/component/home.scss
@@ -10,7 +10,7 @@ html {
 .main__box {
   width: 1440px;
   margin: 0 auto;
-  background-color: #f0f0f0;
+  background-color: #f4f8fd;
 }
 
 @media (max-width: 768px) {
