--- a/src/assets/style/component/review.scss
+++ b/src/assets/style/component/review.scss
@@ -119,8 +119,8 @@
     .review__cardbox {
       .cards {
         flex-wrap: wrap;
-        .card {
-          margin: 10px 0;
+        .card-review {
+          margin: 5px 0;
         }
       }
       .pagination__box {
